[package]
name = "arthrobot"
version = "0.1.0"
authors = ["tamo <tamo@meilisearch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.10.5", features = ["collector", "unstable_discord_api"] }
serde_json = "*"
anyhow = "*"
kankyo = "*"
