[package]
name = "arthrobot"
version = "0.1.1"
authors = ["tamo <tamo@meilisearch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
airtable-api = { git = "https://github.com/irevoire/cio", branch = "rustls" }
serenity = { version = "0.10.10", default-features = true, features = ["collector", "rustls_backend"] }
serde = "1.0.132"
anyhow = "1.0.51"
kankyo = "0.3.0"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
panic = "abort"
